--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vuepress build examples"
   },
   "devDependencies": {
-    "@vuepress/plugin-blog": "latest",
-    "vuepress": "next"
+    "@vuepress/plugin-blog": "~1.9.0",
+    "vuepress": "~1.7.0"
   }
 }
